changed css name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Author: Wefqi Odeh -->   
 <meta charset="UTF-8">
 <title>Getting to Know Eachother</title>
-<link rel="stylesheet" href="getting-to-know-eachother.css">
+<link rel="stylesheet" href="index.css">
 <style>
     table, th, td {
       border:1px solid black;
