--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 
 <body>
-<center>
-<h1><center>Wefqi Odeh</center></h1>
-<center><a href="mailto:wefqiaodeh@lewisu.edu">Lewis University Email</a> </center>
+
+<h1>Wefqi Odeh</h1>
+<a href="mailto:wefqiaodeh@lewisu.edu">Lewis University Email</a> 
 <br>
-<center><img src="IMG_6930.jpg" alt="Wefqi Odeh's Picture" style="width: 300px;px;"></center>
+<img src="IMG_6930.jpg" alt="Wefqi Odeh's Picture" style="width: 300px;">
 <br>
 <h2> <b>Introduction</b></h2>
 <p>My name is Wefqi Odeh. I am a Palestinan-American that has lived here for most of my life. I live in a family of 6 which inlcudes:my parents, two brothers and a sister. I am the oldest and the secnd person to attend lewis university. I am majoring in computer science and I am only just begining to learn about this amazing career. I plan to minor in biology and recieve my bachlors in computer science.</p>
@@ -34,13 +34,13 @@
 <br>
 <h2>Greatest Innovations</h2>
 <ul style="list-style-type:square;">
-    <li>Creation of the Telephone</li> <a href="https://www.elon.edu/u/imagining/time-capsule/150-years/back-1870-1940/">The First Telephone</a>
-    <li>The Creation of the Calculator</li> <a href="https://www.britannica.com/technology/Pascaline">The First Calculator</a>
-    <li>Invention of Wifi</li><a href="https://purple.ai/blogs/history-wifi/">Creation of Wifi</a>
+    <li>Creation of the Telephone <a href="https://www.elon.edu/u/imagining/time-capsule/150-years/back-1870-1940/">The First Telephone</a></li>
+    <li>The Creation of the Calculator <a href="https://www.britannica.com/technology/Pascaline">The First Calculator</a></li>
+    <li>Invention of Wifi <a href="https://purple.ai/blogs/history-wifi/">Creation of Wifi</a></li>
 </ul>
 <br>
 <h2>Fun Fact about Myself</h2>
-<p>A fun fact about myself is that was bron overseas in Silwad, Palestine. I am a second generation Palestinan American and speak both enligh and arabic fluetly.</p></p>
+<p>A fun fact about myself is that was bron overseas in Silwad, Palestine. I am a second generation Palestinan American and speak both enligh and arabic fluetly.</p>
 <h2>My Class Schedule:</h2>
 <br>
 <table style="width:100%">
@@ -80,6 +80,6 @@
 <!-- Created with the Help of Professor Eric Pogue and W3C  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a> -->  
 
 
-</center>
+
 </body>
 </html>
