added emojis section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 <h2>Click to see my University School Page</h2>
 <br>
 <a href="https://www.lewisu.edu/"><button>Lewis University Main Page</button></a>
+<br>
+<h2>My favorite Emojis to Use</h2>
+<p>&#127770; &#128514; &#128517; &#128004; &#128128;</p>
 
 <!-- Created with the Help of Professor Eric Pogue and W3C  <a href="https://www.w3schools.com/">Visit W3Schools.com!</a> -->  
 
